<resources>
    <string name="app_name">BottomNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterName">Введите ваше имя</string>
    <string name="settings">Настройки</string>
    <string name="statistics">Статистика</string>
    <string name="tests">Тесты</string>
    <string name="theory">Теория</string>
    <string name="send">Отправить</string>
    <string name="main">Главная</string>
</resources>